# py_opengl

./: .gitignore  README.md  pyproject.toml
py_opengl/: aabbtree.py  abtree.py  buffer.py  camera.py  clock.py  color.py  geometry.py  gjk.py  glm.py  keyboard.py  main.py  maths.py  mesh.py  model.py  mouse.py  notes.txt  octree.py  primitives.py  shader.py  simplex.py  texture.py  tmp.py  transform.py  tree.py  utils.py  vbo.py  window.py
py_opengl/shaders/: debug_shader.frag  debug_shader.vert  shader.frag  shader.vert
tests/: test_maths.py  test_py_opengl.py
